--- a/game/snail-bob-2.html
+++ b/game/snail-bob-2.html
@@ -342,29 +342,51 @@
     </div>
     <!-- theme-switcher end -->
     <div class="page-wrapper">
-    <!-- header-section start  -->
-    <header class="header">
-      <div class="header__bottom">
-        <div class="container">
-          <nav class="navbar navbar-expand-xl p-0 align-items-center">
-            <a class="site-logo site-title" href="index.html"><img src="assets/images/favicon.png" alt="site-logo"><span class="logo-icon"><i class="flaticon-fire"></i></span></a>
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="menu-toggle"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav main-menu ml-auto">
-                <li><a href="action-games.html">Action</a></li>
-                <li><a href="cars-games.html">Cars</a></li>
-                <li><a href="puzzle-games.html">Puzzle</a></li>
-                <li><a href="running-games.html">Running</a></li>
-                <li><a href="shooting-games.html">Shooting</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </div><!-- header__bottom end -->
-    </header>
-    <!-- header-section end  -->
+     <!-- Header Area Start -->
+        <nav class="fag-header navbar navbar-expand-lg">
+          <div class="container">
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="menu-toggle"></span>
+              </button>
+              <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+                  <ul class="header_menu  mr-auto">
+                      <li class="nav-item active">
+                          <a href="../index.html" class="nav-link">Home</a>
+                      </li>
+                      <li class="nav-item">
+                              <a href="../action/index.html" class="nav-link">Action</a>
+                      </li>
+                      <li class="nav-item">
+                              <a href="../adventure/index.html" class="nav-link">Adventure</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="../bike/index.html" class="nav-link">Bike</a>
+                      </li>        
+                      <li class="nav-item">
+                              <a href="../car/index.html" class="nav-link">Car</a>
+                      </li>        
+                      <li class="nav-item">
+                          <a href="../idle/index.html" class="nav-link">Idle</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="../shooting/index.html" class="nav-link">Shooting</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="../skill/index.html" class="nav-link">Skill</a>
+                      </li>
+                      <li class="nav-item">
+                          <a href="../sport/index.html" class="nav-link">Sport</a>
+                      </li>
+                  </ul>
+                  <div class="search-container">
+        <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
+        <div id="gameList"></div>
+</div>
+              </div>
+          </div>
+      </nav>
+      <!-- Header Area End -->
   
       <!-- inner-hero-section start -->
       <div class="inner-hero-section">
@@ -3384,43 +3406,72 @@
         </div>
       </section>
       <!-- contest section end -->
-        <!-- footer section start  -->
-    <footer class="footer-section">
-      <div class="bg-shape--top"><img src="assets/images/elements/round-shape-2.png" alt="image"></div>
-      <div class="container pt-120">
-        <div class="row pb-5 align-items-center">
-          <div class="col-lg-4">
-            <ul class="app-btn">
-              <li><a href="#0"><img src="assets/images/icon/store-btn/1.png" alt="image"></a></li>
-              <li><a href="#0"><img src="assets/images/icon/store-btn/2.png" alt="image"></a></li>
-            </ul>
-          </div>
-          <div class="col-lg-8">
-            <ul class="short-links justify-content-lg-end justify-content-center">
-              <li><a href="#0">About</a></li>
-              <li><a href="#0">FAQs</a></li>
-              <li><a href="#0">Contact</a></li>
-              <li><a href="#0">Terms of Services</a></li>
-              <li><a href="#0">Privacy</a></li>
-            </ul>
-          </div>
+      <!-- Footer Area Start -->
+    <footer class="fag-footer container">
+      <div id="awn-z8463442"></div>
+        <div class="footer-top-area">
+            <div>
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="single-footer1">
+                            <h3>About us</h3>
+                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                        </div>
+                    </div>
+					<div class="col-lg-3">
+                                 <div class="single-footer">
+                                        <h3>Tranding Games</h3>
+                                        <ul>
+                                            <li><a href="/game/drift-hunters.html">Drift Hunters</a></li>
+                                            <li><a href="/game/drift-boss.html">Drift Boss</a></li>
+                                            <li><a href="/game/block-blast.html">Block Blast</a></li>
+                                            <li><a href="/game/1v1-lol.html">1V1.lol Unblocked</a></li>
+                                            <li><a href="/game/eggy-car.html">Eggy Car</a></li>
+                                        </ul>
+                                    </div>
+					           </div>
+
+					 <div class=" col-lg-3 col-md-6 col-sm-12">
+                                    <div class="single-footer">
+                                        <h3>Top Games</h3>
+                                        <ul>
+                                            <li><a href="/game/moto-x3m-bike-race.html">Moto X3M</a></li>
+                                            <li><a href="/game/survival-race.html">Survival Race</a></li>
+                                            <li><a href="/game/drift-boss.html">Drift Boss</a></li>
+                                            <li><a href="/game/idle-breakout.html">Idle Breakout</a></li>
+                                            <li><a href="/game/angry-gran-run.html">Angry gran Run</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                </div>
+            </div>
         </div>
-        <hr>
-        <div class="row py-5 align-items-center">
-          <div class="col-lg-6">
-            <p class="copy-right-text text-lg-left text-center mb-lg-0 mb-3">Copyright © 2020.All Rights Reserved By <a href="https://ubg9.github.io">Racing Games</a></p>
-          </div>
-          <div class="col-lg-6">
-            <ul class="social-links justify-content-lg-end justify-content-center">
-              <li><a href="#0"><i class="fab fa-facebook-f"></i></a></li>
-              <li><a href="#0"><i class="fab fa-twitter"></i></a></li>
-              <li><a href="#0"><i class="fab fa-linkedin-in"></i></a></li>
-            </ul>
-          </div>
+        <div class="footer-bottom">
+            <div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="footer-bottom-inn">
+                            <div class="footer-logo">
+                                <a href="../index.html">
+                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
+                                </a>
+                            </div>
+                            <div class="footer-social">
+                                <p>
+				             </p>
+                            </div>
+                            <div class="copyright">
+                                <p class="text-white">&copy; Copyrights 2025 76-Unblocked-GAMES - All Rights Reserved</p>
+				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </footer>
-    <!-- footer section end -->
+    <!-- Footer Area End -->
+    
     <section class="pb-120 mt-minus-100">
       <div class="container">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8564444292475105"
