--- a/skill/index.html
+++ b/skill/index.html
@@ -83,7 +83,7 @@
         </li>
 	    </li>  
 	    <li class="nav-item">
-            <a href="../2-player-games/index.html" class="nav-link">2 Player Games</a>
+            <a href="/2-player-games/index.html" class="nav-link">2 Player Games</a>
         </li>
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
@@ -973,7 +973,7 @@ Skill games are competitive games where the outcome is determined by the player'
     <!--Main js-->
     <script src="../assets/js/main.js"></script>
     <!-- path     -->
-    <script src="/assets/js/fix-paths.js"></script>
+<!--     <script src="/assets/js/fix-paths.js"></script> -->
 
        
 </body>
