--- a/idle/index.html
+++ b/idle/index.html
@@ -15,24 +15,24 @@
     <!-- Title -->
     <title>Idle Games 👆🏻 | Unblocked Games | FAF Games</title>
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <!--Font Awesome css-->
-    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="/assets/css/all.min.css">
     <!--Magnific css-->
-    <link rel="stylesheet" href="../assets/css/magnific-popup.css">
+    <link rel="stylesheet" href="/assets/css/magnific-popup.css">
     <!--Owl-Carousel css-->
-    <link rel="stylesheet" href="../assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="../assets/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
     <!--NoUiSlider css-->
-    <link rel="stylesheet" href="../assets/css/nouislider.min.css">
+    <link rel="stylesheet" href="/assets/css/nouislider.min.css">
     <!--Animate css-->
-    <link rel="stylesheet" href="../assets/css/animate.min.css">
+    <link rel="stylesheet" href="/assets/css/animate.min.css">
     <!--Site Main Style css-->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <!--Responsive css-->
-    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="stylesheet" href="/assets/css/responsive.css">
       <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BPGNZNTLZ"></script>
 <script>
@@ -57,7 +57,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
@@ -67,34 +67,34 @@
             <a href="./index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="../action/index.html" class="nav-link">Action</a>
+            <a href="/action/index.html" class="nav-link">Action</a>
         </li>
         <li class="nav-item">
-            <a href="../adventure/index.html" class="nav-link">Adventure</a>
+            <a href="/adventure/index.html" class="nav-link">Adventure</a>
         </li>
         <li class="nav-item">
-            <a href="../bike/index.html" class="nav-link">Bike</a>
+            <a href="/bike/index.html" class="nav-link">Bike</a>
         </li>        
         <li class="nav-item">
-            <a href="../car/index.html" class="nav-link">Car</a>
+            <a href="/car/index.html" class="nav-link">Car</a>
         </li>  
 	    <li class="nav-item">
-            <a href="../game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
+            <a href="/game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	    </li>  
 	    <li class="nav-item">
-            <a href="../2-player-games/index.html" class="nav-link">2 Player Games</a>
+            <a href="/2-player-games/index.html" class="nav-link">2 Player Games</a>
         </li>
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="../idle/index.html">Idle</a></li>
-                <li><a class="dropdown-item" href="../shooting/index.html">Shooting</a></li>
-                <li><a class="dropdown-item" href="../skill/index.html">Skill</a></li>
-                <li><a class="dropdown-item" href="../sport/index.html">Sport</a></li>
-                <li><a class="dropdown-item" href="../classroom6x/index.html">Classroom 6x</a></li>
-                <li><a class="dropdown-item" href="../2-player-games/index.html">2 Player Games</a></li>
+                <li><a class="dropdown-item" href="/idle/index.html">Idle</a></li>
+                <li><a class="dropdown-item" href="/shooting/index.html">Shooting</a></li>
+                <li><a class="dropdown-item" href="/skill/index.html">Skill</a></li>
+                <li><a class="dropdown-item" href="/sport/index.html">Sport</a></li>
+                <li><a class="dropdown-item" href="/classroom6x/index.html">Classroom 6x</a></li>
+                <li><a class="dropdown-item" href="/2-player-games/index.html">2 Player Games</a></li>
             </ul>
         </li>
     </ul>
@@ -162,12 +162,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/clicker-heroes.html">
-                                                <img src="../assets/img/clickerheroes/clicker-heroes.png" alt="Clicker Heroes" />
+                                            <a href="/game/clicker-heroes.html">
+                                                <img src="/assets/img/clickerheroes/clicker-heroes.png" alt="Clicker Heroes" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/clicker-heroes.html">Clicker Heroes</a></h2>
+                                        <h2><a href="/game/clicker-heroes.html">Clicker Heroes</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -176,12 +176,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/cookie-clicker.html">
-                                                <img src="../assets/img/cookieclicker/cookie-clicker.png" alt="Cookie Clicker" />
+                                            <a href="/game/cookie-clicker.html">
+                                                <img src="/assets/img/cookieclicker/cookie-clicker.png" alt="Cookie Clicker" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/cookie-clicker.html">Cookie Clicker</a></h2>
+                                        <h2><a href="/game/cookie-clicker.html">Cookie Clicker</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -190,12 +190,12 @@
 				<div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/spacebar-clicker.html">
-                                                <img src="../assets/img/spacebar-clicker/spacebar-clicker.webp" alt="Spacebar Clicker" />
+                                            <a href="/game/spacebar-clicker.html">
+                                                <img src="/assets/img/spacebar-clicker/spacebar-clicker.webp" alt="Spacebar Clicker" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/spacebar-clicker.html">Spacebar Clicker</a></h2>
+                                        <h2><a href="/game/spacebar-clicker.html">Spacebar Clicker</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -204,12 +204,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/merge-cakes.html">
-                                                <img src="../assets/img/mergecakes/merge-cakes.png" alt="Merge Cakes" />
+                                            <a href="/game/merge-cakes.html">
+                                                <img src="/assets/img/mergecakes/merge-cakes.png" alt="Merge Cakes" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/merge-cakes.html">Merge Cakes</a></h2>
+                                        <h2><a href="/game/merge-cakes.html">Merge Cakes</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -218,12 +218,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/idle-breakout.html">
-                                                <img src="../assets/img/idlebreakout/idle-breakout.png" alt="Idle Breakout" />
+                                            <a href="/game/idle-breakout.html">
+                                                <img src="/assets/img/idlebreakout/idle-breakout.png" alt="Idle Breakout" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/idle-breakout.html">Idle Breakout</a></h2>
+                                        <h2><a href="/game/idle-breakout.html">Idle Breakout</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -232,12 +232,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/idle-dice.html">
-                                                <img src="../assets/img/idledice/idle-dice.png" alt="Idle Dice" />
+                                            <a href="/game/idle-dice.html">
+                                                <img src="/assets/img/idledice/idle-dice.png" alt="Idle Dice" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/idle-dice.html">Idle Dice</a></h2>
+                                        <h2><a href="/game/idle-dice.html">Idle Dice</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -246,12 +246,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/idle-miner.html">
-                                                <img src="../assets/img/idleminer/idle-miner.png" alt="Idle Miner" />
+                                            <a href="/game/idle-miner.html">
+                                                <img src="/assets/img/idleminer/idle-miner.png" alt="Idle Miner" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/idle-miner.html">Idle Miner</a></h2>
+                                        <h2><a href="/game/idle-miner.html">Idle Miner</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -260,12 +260,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/idle-mining-empire.html">
-                                                <img src="../assets/img/idleminingempire/idle-mining-empire.png" alt="Idle Mining Empire" />
+                                            <a href="/game/idle-mining-empire.html">
+                                                <img src="/assets/img/idleminingempire/idle-mining-empire.png" alt="Idle Mining Empire" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/idle-mining-empire.html">Idle Mining Empire</a></h2>
+                                        <h2><a href="/game/idle-mining-empire.html">Idle Mining Empire</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -274,12 +274,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/idle-startup-tycoon.html">
-                                                <img src="../assets/img/idlestartuptycoon/idle-startup-tycoon.png" alt="Idle Startup Tycoon" />
+                                            <a href="/game/idle-startup-tycoon.html">
+                                                <img src="/assets/img/idlestartuptycoon/idle-startup-tycoon.png" alt="Idle Startup Tycoon" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/idle-startup-tycoon.html">Idle Startup Tycoon</a></h2>
+                                        <h2><a href="/game/idle-startup-tycoon.html">Idle Startup Tycoon</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -288,12 +288,12 @@
                             <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/tiny-fishing.html">
-                                                <img src="../assets/img/tinyfishing/tiny-fishing.png" alt="Tiny Fishing" />
+                                            <a href="/game/tiny-fishing.html">
+                                                <img src="/assets/img/tinyfishing/tiny-fishing.png" alt="Tiny Fishing" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/tiny-fishing.html">Tiny Fishing</a></h2>
+                                        <h2><a href="/game/tiny-fishing.html">Tiny Fishing</a></h2>
                                         <p class="game-meta">Idle | Desktop</p>
                                     </div>
                                 </div>
@@ -352,8 +352,8 @@
                     <div class="col-12">
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
-                                <a href="../index.html">
-                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
+                                <a href="/index.html">
+                                    <img src="/assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
                                 </a>
                             </div>
                             <div class="footer-social">
@@ -374,26 +374,26 @@
 
 
     <!--Jquery js-->
-    <script src="../assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
     <!--Bootstrap js-->
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <!--Owl-Carousel js-->
-    <script src="../assets/js/owl.carousel.min.js"></script>
+    <script src="/assets/js/owl.carousel.min.js"></script>
     <!--Magnific js-->
-    <script src="../assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="/assets/js/jquery.magnific-popup.min.js"></script>
     <!--wNumb js-->
-    <script src="../assets/js/wNumb.js"></script>
+    <script src="/assets/js/wNumb.js"></script>
     <!--NoUiSlider js-->
-    <script src="../assets/js/nouislider.min.js"></script>
+    <script src="/assets/js/nouislider.min.js"></script>
     <!-- Isotop Js -->
-    <script src="../assets/js/isotope.pkgd.min.js"></script>
-    <!-- <script src="../assets/js/custom-isotop.js"></script> -->
+    <script src="/assets/js/isotope.pkgd.min.js"></script>
+    <!-- <script src="/assets/js/custom-isotop.js"></script> -->
     <!-- Counter JS -->
-    <script src="../assets/js/jquery.counterup.min.js"></script>
+    <script src="/assets/js/jquery.counterup.min.js"></script>
     <!-- Custom Clock JS -->
-    <script src="../assets/js/clock-custom.js"></script>
+    <script src="/assets/js/clock-custom.js"></script>
     <!--Main js-->
-    <script src="../assets/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 
        
 </body>
