--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                                   <div class="games-single-item img-contain-isotope">
                                       <div class="games-thumb">
                            <a href="./game/drive-mad.html">
-                           <img src="../assets/img/drivemad/drive-mad-logo.webp" alt="Drive Mad" />
+                           <img src="/assets/img/drivemad/drive-mad-logo.webp" alt="Drive Mad" />
                            </a>
                      </div>
                      <div class="games-desc">
@@ -387,12 +387,12 @@
 		                <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/eparkour.html">
-                                                <img src="../assets/img/eparkour/eparkour.webp" alt="eparkour" />
+                                            <a href="/game/eparkour.html">
+                                                <img src="/assets/img/eparkour/eparkour.webp" alt="eparkour" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/eparkour.html">eparkour</a></h2>
+                                        <h2><a href="/game/eparkour.html">eparkour</a></h2>
                                         <p class="game-meta">Skill | Jumaping | Desktop</p>
                                     </div>
                                 </div>
@@ -401,12 +401,12 @@
 				 <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
-                                            <a href="../game/soccerbros.html">
-                                                <img src="../assets/img/soccerbros/soccerbros.webp" alt="Soccer bros" />
+                                            <a href="/game/soccerbros.html">
+                                                <img src="/assets/img/soccerbros/soccerbros.webp" alt="Soccer bros" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
-                                        <h2><a href="../game/soccerbros.html">Soccer bros</a></h2>
+                                        <h2><a href="/game/soccerbros.html">Soccer bros</a></h2>
                                         <p class="game-meta">Skill | Sports | Desktop</p>
                                     </div>
                                 </div>
@@ -462,12 +462,12 @@
 <div class="games-item desktop">
       <div class="games-single-item img-contain-isotope">
                  <div class="games-thumb">
-           <a href="../game/spacebar-clicker.html">
-       <img src="../assets/img/spacebar-clicker/spacebar-clicker.webp" alt="Spacebar Clicker" />
+           <a href="/game/spacebar-clicker.html">
+       <img src="/assets/img/spacebar-clicker/spacebar-clicker.webp" alt="Spacebar Clicker" />
           </a>
            </div>
         <div class="games-desc">
-            <h2><a href="../game/spacebar-clicker.html">Spacebar Clicker</a></h2>
+            <h2><a href="/game/spacebar-clicker.html">Spacebar Clicker</a></h2>
                 <p class="game-meta">Idle | Desktop</p>
                    </div>
                       </div>
@@ -556,12 +556,12 @@
     <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
-                <a href="../game/idle-breakout.html">
-                    <img src="../assets/img/idlebreakout/idle-breakout.webp" alt="Idle Breakout" title="Idle Breakout" />
+                <a href="/game/idle-breakout.html">
+                    <img src="/assets/img/idlebreakout/idle-breakout.webp" alt="Idle Breakout" title="Idle Breakout" />
                 </a>
             </div>
             <div class="games-desc">
-                <h2><a href="../game/idle-breakout.html">Idle Breakout</a></h2>
+                <h2><a href="/game/idle-breakout.html">Idle Breakout</a></h2>
                 <p class="game-meta">Idle | Desktop</p>
             </div>
         </div>
@@ -601,12 +601,12 @@
 					<div class="games-item desktop">
 					    <div class="games-single-item img-contain-isotope">
 					        <div class="games-thumb">
-					            <a href="../game/1v1-lol.html">
-					                <img src="../assets/img/1v1.lol/logo.webp" alt="1v1 LOL" title="1v1 LOL" />
+					            <a href="/game/1v1-lol.html">
+					                <img src="/assets/img/1v1.lol/logo.webp" alt="1v1 LOL" title="1v1 LOL" />
 					            </a>
 					        </div>
 					        <div class="games-desc">
-					            <h2><a href="../game/1v1-lol.html">1v1 LOL</a></h2>
+					            <h2><a href="/game/1v1-lol.html">1v1 LOL</a></h2>
 					            <p class="game-meta">Action | Shooting | Desktop</p>
 					        </div>
 					    </div>
@@ -1237,7 +1237,7 @@
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
                                 <a href="index.html">
-                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
+                                    <img src="/assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
                                 </a>
                             </div>
                             <div class="footer-social">
