--- a/game/street-ball-star.html
+++ b/game/street-ball-star.html
@@ -297,10 +297,10 @@
           <div id="cursor-large"></div>
           <div id="cursor-small"></div>
           <!-- Custom Cursor End -->
-        <!-- Header Area Start -->
+       <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt="FAF Games" /></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -334,6 +334,10 @@
                           <a href="../sport/index.html" class="nav-link">Sport</a>
                       </li>
                   </ul>
+                  <div class="search-container">
+        <input type="text" id="gameSearch" placeholder="Search 250+ games" oninput="searchGames()">
+        <div id="gameList"></div>
+</div>
               </div>
           </div>
       </nav>
@@ -628,96 +632,71 @@
             </div>
           </section>
           <!-- Related Games End -->
-          <footer class="fag-footer">
-             <div class="footer-top-area">
-                 <div class="container">
-                     <div class="row">
-                         <div class="col-lg-4 col-md-6 col-sm-12">
-                             <div class="single-footer">
-                                 <h3>About us</h3>
-                                 <p>Moreover, they ban certain gaming websites and utilize internet filters to restrict others. <br>All gaming sites are blocked by these filters.<br>
-                                     Even though it takes a long time, <br>some gaming websites will get unblocked since it is difficult to prohibit every website on the internet, <br>
-                                     and because <a href="https://faf-games.github.io">FAF GAME</a> websites are less likely to be blocked.</p>
-                             </div>
-                         </div>
-                         <div class="col-lg-5 col-md-6 col-sm-12">
-                             <div class="widget-content">
-                                 <div class="row clearfix">
-                                     <div class=" col-lg-6 col-md-6 col-sm-12">
-                                         <div class="single-footer">
-                                             <h3>Our Games</h3>
-                                             <ul>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Need For Speed</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Call Of Duty</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Resident Evil</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Dragons Fight</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>2 Player Champions</a></li>
-                                             </ul>
-                                         </div>
-                                     </div>
-                                     <div class=" col-lg-6 col-md-6 col-sm-12">
-                                         <div class="single-footer">
-                                             <h3>Explore</h3>
-                                             <ul>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>About</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Our Games</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Contact Us</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Help & Support</a></li>
-                                                 <li><a href="#"><span class="fa fa-caret-right"></span>Privacy Policy</a></li>
-                                             </ul>
-                                         </div>
-                                     </div>
-                                 </div>
-                             </div>
-                         </div>
-                         <div class=" col-lg-3 col-md-6 col-sm-12">
-                             <div class="single-footer">
-                                 <h3>Contact Us</h3>
-                                 <div class="footer-contact">
-                                     <h4 class="title"><i class="fa fa-map-marker"></i>Address </h4>
-                                     <p>88 Road, Broklyn Street<br>New York, USA</p>
-                                 </div>
-                                 <div class="footer-contact">
-                                     <h4 class="title"><i class="fa fa-envelope"></i>Email Address</h4>
-                                     <p>info@fafgames.com</p>
-                                 </div>
-                                 <div class="footer-contact">
-                                     <h4 class="title"><i class="fa fa-phone"></i>Phone </h4>
-                                     <p>777-1234-567</p>
-                                 </div>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-             <div class="footer-bottom">
-                 <div class="container">
-                     <div class="row">
-                         <div class="col-12">
-                             <div class="footer-bottom-inn">
-                                 <div class="footer-logo">
-                                     <a href="index.html">
-                                         <img src="../assets/img/logo.png" alt="FAF Games" />
-                                     </a>
-                                 </div>
-                                 <div class="footer-social">
-                                     <ul>
-                                         <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                                         <li><a href="#"><span class="fab fa-instagram"></span></a></li>
-                                         <li><a href="#"><span class="fab fa-youtube"></span></a></li>
-                                         <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                                     </ul>
-                                 </div>
-                                 <div class="copyright">
-                                     <p>&copy; Copyrights 2020 FAF GAMES - All Rights Reserved</p>
-                                 </div>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-         </footer>
-         <!-- Footer Area End -->
+          <!-- Footer Area Start -->
+    <footer class="fag-footer container">
+      <div id="awn-z8463442"></div>
+        <div class="footer-top-area">
+            <div>
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-12">
+                        <div class="single-footer1">
+                            <h3>About us</h3>
+                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                        </div>
+                    </div>
+					<div class="col-lg-3">
+                                 <div class="single-footer">
+                                        <h3>Tranding Games</h3>
+                                        <ul>
+                                            <li><a href="/game/drift-hunters.html">Drift Hunters</a></li>
+                                            <li><a href="/game/drift-boss.html">Drift Boss</a></li>
+                                            <li><a href="/game/block-blast.html">Block Blast</a></li>
+                                            <li><a href="/game/1v1-lol.html">1V1.lol Unblocked</a></li>
+                                            <li><a href="/game/eggy-car.html">Eggy Car</a></li>
+                                        </ul>
+                                    </div>
+					           </div>
+
+					 <div class=" col-lg-3 col-md-6 col-sm-12">
+                                    <div class="single-footer">
+                                        <h3>Top Games</h3>
+                                        <ul>
+                                            <li><a href="/game/moto-x3m-bike-race.html">Moto X3M</a></li>
+                                            <li><a href="/game/survival-race.html">Survival Race</a></li>
+                                            <li><a href="/game/drift-boss.html">Drift Boss</a></li>
+                                            <li><a href="/game/idle-breakout.html">Idle Breakout</a></li>
+                                            <li><a href="/game/angry-gran-run.html">Angry gran Run</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="footer-bottom-inn">
+                            <div class="footer-logo">
+                                <a href="../index.html">
+                                    <img src="../assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />
+                                </a>
+                            </div>
+                            <div class="footer-social">
+                                <p>
+				             </p>
+                            </div>
+                            <div class="copyright">
+                                <p class="text-white">&copy; Copyrights 2025 76-Unblocked-GAMES - All Rights Reserved</p>
+				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Area End -->
     
            
         <!--Jquery js-->
@@ -734,7 +713,7 @@
         <script src="../assets/js/nouislider.min.js"></script>
         <!-- Isotop Js -->
         <script src="../assets/js/isotope.pkgd.min.js"></script>
-        <script src="../assets/js/custom-isotop.js"></script>
+<!--         <script src="../assets/js/custom-isotop.js"></script> -->
         <!--Main js-->
         <script src="../assets/js/main.js"></script>
          <script>
