--- a/game/tank-trouble.html
+++ b/game/tank-trouble.html
@@ -304,7 +304,7 @@
           <div id="cursor-large"></div>
           <div id="cursor-small"></div>
           <!-- Custom Cursor End -->
-       <!-- Header Area Start -->
+        <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
               <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
@@ -823,6 +823,7 @@
           </section>
           <!-- Related Games End -->
           <!-- Footer Area Start -->
+     <!-- Footer Area Start -->
     <footer class="fag-footer container">
       <div id="awn-z8463442"></div>
         <div class="footer-top-area">
