--- a/shooting/index.html
+++ b/shooting/index.html
@@ -69,7 +69,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/assets/img//logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
