--- a/game/demolition-derby-crash-racing.html
+++ b/game/demolition-derby-crash-racing.html
@@ -15,7 +15,7 @@
       demolition derby crash racing unblocked
       demolition derby crash racing free online">
       <meta name="author" content="76 Unblocked Games">
-        <link rel="canonical" href="http://76-unblockedgames.github.io/game/demolition-derby-crash-racing.html" />
+        <link rel="canonical" href="http://76-unblockedgames.github.io/game/index.html" />
 	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
       <!-- Title -->
