--- a/game/eggy-car.html
+++ b/game/eggy-car.html
@@ -9,12 +9,12 @@
             
      <meta name="keywords" content="Eggy Car, Eggy Car game, Eggy Car unblocked, Eggy Car online, play Eggy Car, Eggy Car free, Eggy Car no download, Eggy Car school, Eggy Car for kids, Eggy Car without ads, Eggy Car fun game, Eggy Car balancing game, Eggy Car tips, Eggy Car tricks, how to play Eggy Car, Eggy Car guide, Eggy Car challenges, Eggy Car reflex game, Eggy Car mobile, Eggy Car driving game, Eggy Car arcade game">
 
-      <meta name="author" content="FAF Games Team">
-        <link rel="canonical" href="/game/eggy-car.html" />
-	<meta name="publisher" content="FAF Games Team">
+      <meta name="author" content="76 Unblocked Games">
+        <link rel="canonical" href="https://76-unblockedgames.github.io/game/eggy-car.html" />
+	<meta name="publisher" content="76 Unblocked Games">
 	<meta name="robots" content="index, follow">
       <!-- Title -->
-      <title>Eggy Car unblocked: Play Now for Free on FAF Games</title>
+      <title>Eggy Car unblocked: Play Eggy Car at 76 Unblocked Games</title>
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
              <!--Bootstrap css-->
@@ -304,7 +304,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
       <div class="container">
-          <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+          <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="menu-toggle"></span>
           </button>
@@ -1240,7 +1240,7 @@
 
     <h2>Eggy Car Unblocked: Can You Keep the Egg Safe?</h2>&nbsp;
 
-    <p>Are you looking for a game that is both simple and ridiculously fun, Eggy Car is perfect for you. But what happens when you can’t access it at school or work? That is where Eggy Car Unblocked comes in. Now you can play without any restrictions, enjoying the challenge of balancing an egg on a moving  <a href="https://faf-games.github.io/car/index.html">Car</a>, no matter where you are!</p>
+    <p>Are you looking for a game that is both simple and ridiculously fun, Eggy Car is perfect for you. But what happens when you can’t access it at school or work? That is where Eggy Car Unblocked comes in. Now you can play without any restrictions, enjoying the challenge of balancing an egg on a moving  <a href="https://76-unblockedgames.github.io/car/index.html">Car</a>, no matter where you are!</p>
 
     <h2>What is Eggy Car?</h2>&nbsp;
     <p>Eggy Car is a fun little game where you drive a car over tricky hills while trying to keep an egg balanced on top. Sounds easy, right? Well, not exactly! Every bump and dip in the road makes the egg wobble, and if it falls off, game over. The goal is to drive as far as possible without letting the egg crack, which is a lot harder than it seems.</p>
@@ -1248,14 +1248,14 @@
     <p>It’s the kind of game that’s easy to pick up but hard to master—perfect for short breaks or when you want to challenge your reflexes.</p>
 
     <h2>Why Play Eggy Car Unblocked?</h2>&nbsp;
-    <p>Many students and office workers love playing Eggy Car, but sometimes the game gets blocked on school or work networks. With Eggy Car unblocked, you can enjoy the game no matter where you are. Whether you’re on your school computer or trying to sneak in some fun during lunch at work, an <a href="https://faf-games.github.io">Unblocked Games</a> allows you to play hassle-free.</p>
+    <p>Many students and office workers love playing Eggy Car, but sometimes the game gets blocked on school or work networks. With Eggy Car unblocked, you can enjoy the game no matter where you are. Whether you’re on your school computer or trying to sneak in some fun during lunch at work, an <a href="https://76-unblockedgames.github.io">Unblocked Games</a> allows you to play hassle-free.</p>
 
     <p>Unblocked versions of Eggy Car are hosted on gaming websites that bypass typical network restrictions, making it super easy to start playing.</p>
 
     <h2>How to Play Eggy Car Unblocked</h2>&nbsp;
     <p>Here’s a simple guide to start playing Eggy Car unblocked:</p>
     <ul>
-        <li><strong>Find an  Unblocked Website:</strong> Search for <a href="https://faf-games.github.io/game/eggy-car.html">"Eggy Car Unblocked"</a> on Google. You will find several gaming sites that host the game.</li>
+        <li><strong>Find an  Unblocked Website:</strong> Search for <a href="https://76-unblockedgames.github.io/game/eggy-car.html">"Eggy Car Unblocked"</a> on Google. You will find several gaming sites that host the game.</li>
         <li><strong>Start the Game:</strong> Once the site loads, click to start driving. The goal is to keep the egg from falling while navigating through hills and bumps.</li>
         <li><strong>Drive Carefully:</strong> Use the arrow keys to control the car’s speed. It’s all about finding the right balance between going fast enough to climb the hills but slow enough to keep the egg steady.</li>
     </ul>
@@ -1290,7 +1290,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -1336,7 +1336,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
@@ -1367,7 +1367,7 @@
     <script src="../assets/js/main.js"></script>
     <script>
             function loadMainGame(){
-            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://faf-games.github.io/game/eggycar/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+            var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://76-unblockedgames.github.io/game/eggy-car.html" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
             document.getElementById("loadgame").innerHTML = html;
             document.getElementById('loadgame').scrollIntoView();
             }
